[metadata]
name = bandit
summary = Security oriented static analyser for python code.
description_file =
    README.rst
author = PyCQA
author_email = code-quality@python.org
home_page = https://bandit.readthedocs.io/
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
project_urls =
    Documentation = https://bandit.readthedocs.io/
    Release Notes = https://github.com/PyCQA/bandit/releases
    Source Code = https://github.com/PyCQA/bandit
    Issue Tracker = https://github.com/PyCQA/bandit/issues
    Discord = https://discord.gg/qYxpadCgkx
    Sponsor = https://psfmember.org/civicrm/contribute/transact/?reset=1&id=42

[extras]
yaml =
    PyYAML
toml =
    tomli>=1.1.0; python_version < "3.11"
baseline =
    GitPython>=3.1.30
sarif =
    sarif-om>=1.0.4
    jschema-to-python>=1.2.3

[entry_points]
console_scripts =
    bandit = bandit.cli.main:main
    bandit-config-generator = bandit.cli.config_generator:main
    bandit-baseline = bandit.cli.baseline:main
bandit.blacklists =
    calls = bandit.blacklists.calls:gen_blacklist
    imports = bandit.blacklists.imports:gen_blacklist
bandit.formatters =
    csv = bandit.formatters.csv:report
    json = bandit.formatters.json:report
    txt = bandit.formatters.text:report
    xml = bandit.formatters.xml:report
    html = bandit.formatters.html:report
    sarif = bandit.formatters.sarif:report
    screen = bandit.formatters.screen:report
    yaml = bandit.formatters.yaml:report
    custom = bandit.formatters.custom:report
bandit.plugins =
    # bandit/plugins/app_debug.py
    flask_debug_true = bandit.plugins.app_debug:flask_debug_true

    # bandit/plugins/asserts.py
    assert_used = bandit.plugins.asserts:assert_used

    # bandit/plugins/crypto_request_no_cert_validation.py
    request_with_no_cert_validation = bandit.plugins.crypto_request_no_cert_validation:request_with_no_cert_validation

    # bandit/plugins/request_without_timeout.py
    request_without_timeout = bandit.plugins.request_without_timeout:request_without_timeout

    # bandit/plugins/exec.py
    exec_used = bandit.plugins.exec:exec_used

    # bandit/plugins/general_bad_File_permissions.py
    set_bad_file_permissions = bandit.plugins.general_bad_file_permissions:set_bad_file_permissions

    # bandit/plugins/general_bind_all_interfaces.py
    hardcoded_bind_all_interfaces = bandit.plugins.general_bind_all_interfaces:hardcoded_bind_all_interfaces

    # bandit/plugins/general_hardcoded_password.py
    hardcoded_password_string = bandit.plugins.general_hardcoded_password:hardcoded_password_string
    hardcoded_password_funcarg = bandit.plugins.general_hardcoded_password:hardcoded_password_funcarg
    hardcoded_password_default = bandit.plugins.general_hardcoded_password:hardcoded_password_default

    # bandit/plugins/general_hardcoded_tmp.py
    hardcoded_tmp_directory = bandit.plugins.general_hardcoded_tmp:hardcoded_tmp_directory

    # bandit/plugins/injection_paramiko.py
    paramiko_calls = bandit.plugins.injection_paramiko:paramiko_calls

    # bandit/plugins/injection_shell.py
    subprocess_popen_with_shell_equals_true = bandit.plugins.injection_shell:subprocess_popen_with_shell_equals_true
    subprocess_without_shell_equals_true = bandit.plugins.injection_shell:subprocess_without_shell_equals_true
    any_other_function_with_shell_equals_true = bandit.plugins.injection_shell:any_other_function_with_shell_equals_true
    start_process_with_a_shell = bandit.plugins.injection_shell:start_process_with_a_shell
    start_process_with_no_shell = bandit.plugins.injection_shell:start_process_with_no_shell
    start_process_with_partial_path = bandit.plugins.injection_shell:start_process_with_partial_path

    # bandit/plugins/injection_sql.py
    hardcoded_sql_expressions = bandit.plugins.injection_sql:hardcoded_sql_expressions

    # bandit/plugins/hashlib_insecure_functions.py
    hashlib_insecure_functions = bandit.plugins.hashlib_insecure_functions:hashlib

    # bandit/plugins/injection_wildcard.py
    linux_commands_wildcard_injection = bandit.plugins.injection_wildcard:linux_commands_wildcard_injection

    # bandit/plugins/django_sql_injection.py
    django_extra_used = bandit.plugins.django_sql_injection:django_extra_used
    django_rawsql_used = bandit.plugins.django_sql_injection:django_rawsql_used

    # bandit/plugins/insecure_ssl_tls.py
    ssl_with_bad_version = bandit.plugins.insecure_ssl_tls:ssl_with_bad_version
    ssl_with_bad_defaults = bandit.plugins.insecure_ssl_tls:ssl_with_bad_defaults
    ssl_with_no_version = bandit.plugins.insecure_ssl_tls:ssl_with_no_version

    # bandit/plugins/jinja2_templates.py
    jinja2_autoescape_false = bandit.plugins.jinja2_templates:jinja2_autoescape_false

    # bandit/plugins/mako_templates.py
    use_of_mako_templates = bandit.plugins.mako_templates:use_of_mako_templates

    # bandit/plugins/django_xss.py
    django_mark_safe = bandit.plugins.django_xss:django_mark_safe

    # bandit/plugins/try_except_continue.py
    try_except_continue = bandit.plugins.try_except_continue:try_except_continue

    # bandit/plugins/try_except_pass.py
    try_except_pass = bandit.plugins.try_except_pass:try_except_pass

    # bandit/plugins/weak_cryptographic_key.py
    weak_cryptographic_key = bandit.plugins.weak_cryptographic_key:weak_cryptographic_key

    # bandit/plugins/yaml_load.py
    yaml_load = bandit.plugins.yaml_load:yaml_load

    # bandit/plugins/ssh_no_host_key_verification.py
    ssh_no_host_key_verification = bandit.plugins.ssh_no_host_key_verification:ssh_no_host_key_verification

    # bandit/plugins/snmp_security_check.py
    snmp_insecure_version = bandit.plugins.snmp_security_check:snmp_insecure_version_check
    snmp_weak_cryptography = bandit.plugins.snmp_security_check:snmp_crypto_check

    # bandit/plugins/logging_config_insecure_listen.py
    logging_config_insecure_listen = bandit.plugins.logging_config_insecure_listen:logging_config_insecure_listen

    #bandit/plugins/tarfile_unsafe_members.py
    tarfile_unsafe_members = bandit.plugins.tarfile_unsafe_members:tarfile_unsafe_members

    #bandit/plugins/pytorch_load.py
    pytorch_load = bandit.plugins.pytorch_load:pytorch_load

    # bandit/plugins/trojansource.py
    trojansource = bandit.plugins.trojansource:trojansource

    # bandit/plugins/markupsafe_markup_xss.py
    markupsafe_markup_xss = bandit.plugins.markupsafe_markup_xss:markupsafe_markup_xss

    # bandit/plugins/huggingface_unsafe_download.py
    huggingface_unsafe_download = bandit.plugins.huggingface_unsafe_download:huggingface_unsafe_download

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  examples*
